# DrillMontreal

./: AUTHORS  LINKS  README.md  script.sh  script_real.sh  script_theoretical.sh
real_case/: Untitled.ipynb  Untitled1.ipynb  drone.ipynb  main.py  pyproject.toml  snowplow.ipynb
real_case/.ipynb_checkpoints/: test_jupyter-checkpoint.ipynb
real_case/cache/.ipynb_checkpoints/: 097756021996ba8ab21a530e71ac14e248747d16-checkpoint.json  4fea6ac164c4a00a755b6060a79514fb84ab9a4d-checkpoint.json  ef3493af2f561174b1b352ccaa6d01c32fcf050f-checkpoint.json
real_case/tests/: test_real_case.py
theoretical_case/: pyproject.toml  theoretical_drone.ipynb
theoretical_case/src/src/: graph.py  test_theoretical_case.py  theoretical_case.py
theoretical_case/tests/: test_theoretical_case.py
