[tool.poetry]
name = "theoretical_case"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Despujol <jean-baptiste.despujol@epita.fr>", "Romain Gregoire <romain.gregoire@epita.fr>", "Martin Mallein <martin.mallein@epita.fr>", "Alex Poiron <alex.poiron@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
